# actix_blog_test

./: .env  Cargo.toml  test.db  test2.db
src/: app.rs  main.rs
static/css/: skeleton.css  style.css
templates/: index.html  login.html  siginin.html
