[package]
name = "blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "*"
dotenv = "0.15"
env_logger = "0.9"
log = "0.4"
tera = "1.5"
serde ={ version = "*", features = ["derive"]}

actix-session = "0.5"
actix-redis ="0.10"

sqlx = {version = "*", features = ["runtime-actix-rustls", "sqlite"]}